feature: implementando ListaDeProcessos.removerPrimeiroElemento()